sols/5g/mypy/parse.output
Terminals unused in grammar

   CR
   INT
   FLOAT
   IDENT


Grammar

    0 $accept: start $end

    1 start: file_input

    2 file_input: star_NEWLINE_stmt ENDMARKER

    3 pick_NEWLINE_stmt: NEWLINE
    4                  | stmt

    5 star_NEWLINE_stmt: star_NEWLINE_stmt pick_NEWLINE_stmt
    6                  | %empty

    7 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT dotted_name NEWLINE

    9 opt_arglist: arglist
   10            | %empty

   11 decorators: decorators decorator
   12           | decorator

   13 decorated: decorators classdef
   14          | decorators funcdef

   15 funcdef: DEF NAME parameters COLON suite

   16 parameters: LPAR varargslist RPAR
   17           | LPAR RPAR

   18 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   19            | star_fpdef_COMMA fpdef opt_EQUAL_test opt_COMMA

   20 opt_EQUAL_test: EQUAL test
   21               | %empty

   22 star_fpdef_COMMA: star_fpdef_COMMA fpdef opt_EQUAL_test COMMA
   23                 | %empty

   24 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   25                    | %empty

   26 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   27                     | DOUBLESTAR NAME

   28 opt_COMMA: COMMA
   29          | %empty

   30 fpdef: NAME
   31      | LPAR fplist RPAR

   32 fplist: fpdef star_fpdef_notest COMMA
   33       | fpdef star_fpdef_notest

   34 star_fpdef_notest: star_fpdef_notest COMMA fpdef
   35                  | %empty

   36 stmt: simple_stmt
   37     | compound_stmt

   38 simple_stmt: small_stmt star_SEMI_small_stmt SEMI NEWLINE
   39            | small_stmt star_SEMI_small_stmt NEWLINE

   40 star_SEMI_small_stmt: star_SEMI_small_stmt SEMI small_stmt
   41                     | %empty

   42 small_stmt: expr_stmt
   43           | print_stmt
   44           | del_stmt
   45           | pass_stmt
   46           | flow_stmt
   47           | import_stmt
   48           | global_stmt
   49           | exec_stmt
   50           | assert_stmt

   51 expr_stmt: testlist augassign pick_yield_expr_testlist
   52          | testlist star_EQUAL

   53 pick_yield_expr_testlist: yield_expr
   54                         | testlist

   55 star_EQUAL: star_EQUAL EQUAL pick_yield_expr_testlist
   56           | %empty

   57 augassign: PLUSEQUAL
   58          | MINEQUAL
   59          | STAREQUAL
   60          | SLASHEQUAL
   61          | PERCENTEQUAL
   62          | AMPEREQUAL
   63          | VBAREQUAL
   64          | CIRCUMFLEXEQUAL
   65          | LEFTSHIFTEQUAL
   66          | RIGHTSHIFTEQUAL
   67          | DOUBLESTAREQUAL
   68          | DOUBLESLASHEQUAL

   69 print_stmt: PRINT opt_test
   70           | PRINT RIGHTSHIFT test opt_test_2

   71 star_COMMA_test: star_COMMA_test COMMA test
   72                | %empty

   73 opt_test: test star_COMMA_test opt_COMMA
   74         | %empty

   75 plus_COMMA_test: plus_COMMA_test COMMA test
   76                | COMMA test

   77 opt_test_2: plus_COMMA_test opt_COMMA
   78           | %empty

   79 del_stmt: DEL exprlist

   80 pass_stmt: PASS

   81 flow_stmt: break_stmt
   82          | continue_stmt
   83          | return_stmt
   84          | raise_stmt
   85          | yield_stmt

   86 break_stmt: BREAK

   87 continue_stmt: CONTINUE

   88 return_stmt: RETURN testlist
   89            | RETURN

   90 yield_stmt: yield_expr

   91 raise_stmt: RAISE test opt_test_3
   92           | RAISE

   93 opt_COMMA_test: COMMA test
   94               | %empty

   95 opt_test_3: COMMA test opt_COMMA_test
   96           | %empty

   97 import_stmt: import_name
   98            | import_from

   99 import_name: IMPORT dotted_as_names

  100 import_from: FROM pick_dotted_name IMPORT pick_STAR_import

  101 pick_dotted_name: star_DOT dotted_name
  102                 | star_DOT DOT

  103 pick_STAR_import: STAR
  104                 | LPAR import_as_names RPAR
  105                 | import_as_names

  106 import_as_name: NAME AS NAME
  107               | NAME

  108 dotted_as_name: dotted_name AS NAME
  109               | dotted_name

  110 import_as_names: import_as_name star_COMMA_import_as_name COMMA
  111                | import_as_name star_COMMA_import_as_name

  112 star_COMMA_import_as_name: star_COMMA_import_as_name COMMA import_as_name
  113                          | %empty

  114 dotted_as_names: dotted_as_name
  115                | dotted_as_names COMMA dotted_as_name

  116 dotted_name: NAME
  117            | dotted_name DOT NAME

  118 global_stmt: GLOBAL NAME star_COMMA_NAME

  119 star_COMMA_NAME: star_COMMA_NAME COMMA NAME
  120                | %empty

  121 exec_stmt: EXEC expr IN test opt_COMMA_test
  122          | EXEC expr

  123 assert_stmt: ASSERT test COMMA test
  124            | ASSERT test

  125 compound_stmt: if_stmt
  126              | while_stmt
  127              | for_stmt
  128              | try_stmt
  129              | with_stmt
  130              | funcdef
  131              | classdef
  132              | decorated

  133 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  134        | IF test COLON suite star_ELIF

  135 star_ELIF: star_ELIF ELIF test COLON suite
  136          | %empty

  137 while_stmt: WHILE test COLON suite ELSE COLON suite
  138           | WHILE test COLON suite

  139 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  140         | FOR exprlist IN testlist COLON suite

  141 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  142         | TRY COLON suite FINALLY COLON suite

  143 plus_except: plus_except except_clause COLON suite
  144            | except_clause COLON suite

  145 opt_ELSE: ELSE COLON suite
  146         | %empty

  147 opt_FINALLY: FINALLY COLON suite
  148            | %empty

  149 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  150 star_COMMA_with_item: star_COMMA_with_item COMMA with_item
  151                     | %empty

  152 with_item: test AS expr
  153          | test

  154 except_clause: EXCEPT test opt_AS_COMMA
  155              | EXCEPT

  156 pick_AS_COMMA: AS
  157              | COMMA

  158 opt_AS_COMMA: pick_AS_COMMA test
  159             | %empty

  160 suite: simple_stmt
  161      | NEWLINE INDENT plus_stmt DEDENT

  162 plus_stmt: plus_stmt stmt
  163          | stmt

  164 testlist_safe: old_test plus_COMMA_old_test opt_COMMA
  165              | old_test

  166 plus_COMMA_old_test: plus_COMMA_old_test COMMA old_test
  167                    | COMMA old_test

  168 old_test: or_test
  169         | old_lambdef

  170 old_lambdef: LAMBDA varargslist COLON old_test
  171            | LAMBDA COLON old_test

  172 test: or_test opt_IF_ELSE
  173     | lambdef

  174 opt_IF_ELSE: IF or_test ELSE test
  175            | %empty

  176 or_test: and_test
  177        | or_test OR and_test

  178 and_test: not_test
  179         | and_test AND not_test

  180 not_test: NOT not_test
  181         | comparison

  182 comparison: expr
  183           | comparison comp_op expr

  184 comp_op: LESS
  185        | GREATER
  186        | EQEQUAL
  187        | GREATEREQUAL
  188        | LESSEQUAL
  189        | GRLT
  190        | NOTEQUAL
  191        | IN
  192        | NOT IN
  193        | IS
  194        | IS NOT

  195 expr: xor_expr
  196     | expr BAR xor_expr

  197 xor_expr: and_expr
  198         | xor_expr CIRCUMFLEX and_expr

  199 and_expr: shift_expr
  200         | and_expr AMPERSAND shift_expr

  201 shift_expr: arith_expr
  202           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  203 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  204                          | RIGHTSHIFT

  205 arith_expr: term
  206           | arith_expr pick_PLUS_MINUS term

  207 pick_PLUS_MINUS: PLUS
  208                | MINUS

  209 term: factor
  210     | term pick_multop factor

  211 pick_multop: STAR
  212            | SLASH
  213            | PERCENT
  214            | DOUBLESLASH

  215 factor: pick_unop factor
  216       | power

  217 pick_unop: PLUS
  218          | MINUS
  219          | TILDE

  220 power: atom star_trailer DOUBLESTAR factor
  221      | atom star_trailer

  222 star_trailer: star_trailer trailer
  223             | %empty

  224 atom: LPAR opt_yield_test RPAR
  225     | LSQB opt_listmaker RSQB
  226     | LBRACE opt_dictorsetmaker RBRACE
  227     | BACKQUOTE testlist1 BACKQUOTE
  228     | NAME
  229     | NUMBER
  230     | plus_STRING

  231 pick_yield_expr_testlist_comp: yield_expr
  232                              | testlist_comp

  233 opt_yield_test: pick_yield_expr_testlist_comp
  234               | %empty

  235 opt_listmaker: listmaker
  236              | %empty

  237 opt_dictorsetmaker: dictorsetmaker
  238                   | %empty

  239 plus_STRING: plus_STRING STRING
  240            | STRING

  241 listmaker: test list_for
  242          | test star_COMMA_test opt_COMMA

  243 testlist_comp: test comp_for
  244              | test star_COMMA_test opt_COMMA

  245 lambdef: LAMBDA varargslist COLON test
  246        | LAMBDA COLON test

  247 trailer: LPAR opt_arglist RPAR
  248        | LSQB subscriptlist RSQB
  249        | DOT NAME

  250 subscriptlist: subscript star_COMMA_subscript COMMA
  251              | subscript star_COMMA_subscript

  252 star_COMMA_subscript: star_COMMA_subscript COMMA subscript
  253                     | %empty

  254 subscript: DOT DOT DOT
  255          | test
  256          | opt_test_only COLON opt_test_only opt_sliceop

  257 opt_test_only: test
  258              | %empty

  259 opt_sliceop: sliceop
  260            | %empty

  261 sliceop: COLON test
  262        | COLON

  263 exprlist: expr star_COMMA_expr COMMA
  264         | expr star_COMMA_expr

  265 star_COMMA_expr: star_COMMA_expr COMMA expr
  266                | %empty

  267 testlist: test star_COMMA_test COMMA
  268         | test star_COMMA_test

  269 dictorsetmaker: test COLON test pick_for_test_test
  270               | test pick_for_test

  271 star_test_COLON_test: star_test_COLON_test COMMA test COLON test
  272                     | %empty

  273 pick_for_test_test: comp_for
  274                   | star_test_COLON_test opt_COMMA

  275 pick_for_test: comp_for
  276              | star_COMMA_test opt_COMMA

  277 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  278         | CLASS NAME COLON suite

  279 opt_testlist: testlist
  280             | %empty

  281 arglist: star_argument_COMMA pick_argument

  282 star_argument_COMMA: star_argument_COMMA argument COMMA
  283                    | %empty

  284 star_COMMA_argument: star_COMMA_argument COMMA argument
  285                    | %empty

  286 opt_DOUBLESTAR_test: COMMA DOUBLESTAR test
  287                    | %empty

  288 pick_argument: argument opt_COMMA
  289              | STAR test star_COMMA_argument opt_DOUBLESTAR_test
  290              | DOUBLESTAR test

  291 argument: test opt_comp_for
  292         | test EQUAL test

  293 opt_comp_for: comp_for
  294             | %empty

  295 list_iter: list_for
  296          | list_if

  297 list_for: FOR exprlist IN testlist_safe list_iter
  298         | FOR exprlist IN testlist_safe

  299 list_if: IF old_test list_iter
  300        | IF old_test

  301 comp_iter: comp_for
  302          | comp_if

  303 comp_for: FOR exprlist IN or_test comp_iter
  304         | FOR exprlist IN or_test

  305 comp_if: IF old_test comp_iter
  306        | IF old_test

  307 testlist1: test
  308          | testlist1 COMMA test

  309 yield_expr: YIELD testlist
  310           | YIELD

  311 star_DOT: star_DOT DOT
  312         | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 62
AMPERSAND (259) 200
AND (260) 179
AS (261) 106 108 152 156
ASSERT (262) 123 124
AT (263) 7 8
BACKQUOTE (264) 227
BAR (265) 196
BREAK (266) 86
CIRCUMFLEX (267) 198
CIRCUMFLEXEQUAL (268) 64
CLASS (269) 277 278
COLON (270) 15 133 134 135 137 138 139 140 141 142 143 144 145 147
    149 170 171 245 246 256 261 262 269 271 277 278
COMMA (271) 22 24 28 32 34 71 75 76 93 95 110 112 115 119 123 150 157
    166 167 250 252 263 265 267 271 282 284 286 308
CONTINUE (272) 87
DEDENT (273) 161
DEF (274) 15
DEL (275) 79
DOT (276) 102 117 249 254 311
DOUBLESLASH (277) 214
DOUBLESLASHEQUAL (278) 68
DOUBLESTAR (279) 24 27 220 286 290
DOUBLESTAREQUAL (280) 67
ELIF (281) 135
ELSE (282) 133 137 139 145 174
ENDMARKER (283) 2
EQEQUAL (284) 186
EQUAL (285) 20 55 292
EXCEPT (286) 154 155
EXEC (287) 121 122
FINALLY (288) 142 147
FOR (289) 139 140 297 298 303 304
FROM (290) 100
GLOBAL (291) 118
GREATER (292) 185
GREATEREQUAL (293) 187
GRLT (294) 189
IF (295) 133 134 174 299 300 305 306
IMPORT (296) 99 100
IN (297) 121 139 140 191 192 297 298 303 304
INDENT (298) 161
IS (299) 193 194
LAMBDA (300) 170 171 245 246
LBRACE (301) 226
LEFTSHIFT (302) 203
LEFTSHIFTEQUAL (303) 65
LESS (304) 184
LESSEQUAL (305) 188
LPAR (306) 7 16 17 31 104 224 247 277
LSQB (307) 225 248
MINEQUAL (308) 58
MINUS (309) 208 218
NAME (310) 15 24 26 27 30 106 107 108 116 117 118 119 228 249 277 278
NEWLINE (311) 3 7 8 38 39 161
NOT (312) 180 192 194
NOTEQUAL (313) 190
NUMBER (314) 229
OR (315) 177
PASS (316) 80
PERCENT (317) 213
PERCENTEQUAL (318) 61
PLUS (319) 207 217
PLUSEQUAL (320) 57
PRINT (321) 69 70
RAISE (322) 91 92
RBRACE (323) 226
RETURN (324) 88 89
RIGHTSHIFT (325) 70 204
RIGHTSHIFTEQUAL (326) 66
RPAR (327) 7 16 17 31 104 224 247 277
RSQB (328) 225 248
SEMI (329) 38 40
SLASH (330) 212
SLASHEQUAL (331) 60
STAR (332) 26 103 211 289
STAREQUAL (333) 59
STRING (334) 239 240
TILDE (335) 219
TRY (336) 141 142
VBAREQUAL (337) 63
WHILE (338) 137 138
WITH (339) 149
YIELD (340) 309 310
CR (341)
INT (342)
FLOAT (343)
IDENT (344)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
start (91)
    on left: 1, on right: 0
file_input (92)
    on left: 2, on right: 1
pick_NEWLINE_stmt (93)
    on left: 3 4, on right: 5
star_NEWLINE_stmt (94)
    on left: 5 6, on right: 2 5
decorator (95)
    on left: 7 8, on right: 11 12
opt_arglist (96)
    on left: 9 10, on right: 7 247
decorators (97)
    on left: 11 12, on right: 11 13 14
decorated (98)
    on left: 13 14, on right: 132
funcdef (99)
    on left: 15, on right: 14 130
parameters (100)
    on left: 16 17, on right: 15
varargslist (101)
    on left: 18 19, on right: 16 170 245
opt_EQUAL_test (102)
    on left: 20 21, on right: 19 22
star_fpdef_COMMA (103)
    on left: 22 23, on right: 18 19 22
opt_DOUBLESTAR_NAME (104)
    on left: 24 25, on right: 26
pick_STAR_DOUBLESTAR (105)
    on left: 26 27, on right: 18
opt_COMMA (106)
    on left: 28 29, on right: 19 73 77 164 242 244 274 276 288
fpdef (107)
    on left: 30 31, on right: 19 22 32 33 34
fplist (108)
    on left: 32 33, on right: 31
star_fpdef_notest (109)
    on left: 34 35, on right: 32 33 34
stmt (110)
    on left: 36 37, on right: 4 162 163
simple_stmt (111)
    on left: 38 39, on right: 36 160
star_SEMI_small_stmt (112)
    on left: 40 41, on right: 38 39 40
small_stmt (113)
    on left: 42 43 44 45 46 47 48 49 50, on right: 38 39 40
expr_stmt (114)
    on left: 51 52, on right: 42
pick_yield_expr_testlist (115)
    on left: 53 54, on right: 51 55
star_EQUAL (116)
    on left: 55 56, on right: 52 55
augassign (117)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68, on right: 51
print_stmt (118)
    on left: 69 70, on right: 43
star_COMMA_test (119)
    on left: 71 72, on right: 71 73 242 244 267 268 276
opt_test (120)
    on left: 73 74, on right: 69
plus_COMMA_test (121)
    on left: 75 76, on right: 75 77
opt_test_2 (122)
    on left: 77 78, on right: 70
del_stmt (123)
    on left: 79, on right: 44
pass_stmt (124)
    on left: 80, on right: 45
flow_stmt (125)
    on left: 81 82 83 84 85, on right: 46
break_stmt (126)
    on left: 86, on right: 81
continue_stmt (127)
    on left: 87, on right: 82
return_stmt (128)
    on left: 88 89, on right: 83
yield_stmt (129)
    on left: 90, on right: 85
raise_stmt (130)
    on left: 91 92, on right: 84
opt_COMMA_test (131)
    on left: 93 94, on right: 95 121
opt_test_3 (132)
    on left: 95 96, on right: 91
import_stmt (133)
    on left: 97 98, on right: 47
import_name (134)
    on left: 99, on right: 97
import_from (135)
    on left: 100, on right: 98
pick_dotted_name (136)
    on left: 101 102, on right: 100
pick_STAR_import (137)
    on left: 103 104 105, on right: 100
import_as_name (138)
    on left: 106 107, on right: 110 111 112
dotted_as_name (139)
    on left: 108 109, on right: 114 115
import_as_names (140)
    on left: 110 111, on right: 104 105
star_COMMA_import_as_name (141)
    on left: 112 113, on right: 110 111 112
dotted_as_names (142)
    on left: 114 115, on right: 99 115
dotted_name (143)
    on left: 116 117, on right: 7 8 101 108 109 117
global_stmt (144)
    on left: 118, on right: 48
star_COMMA_NAME (145)
    on left: 119 120, on right: 118 119
exec_stmt (146)
    on left: 121 122, on right: 49
assert_stmt (147)
    on left: 123 124, on right: 50
compound_stmt (148)
    on left: 125 126 127 128 129 130 131 132, on right: 37
if_stmt (149)
    on left: 133 134, on right: 125
star_ELIF (150)
    on left: 135 136, on right: 133 134 135
while_stmt (151)
    on left: 137 138, on right: 126
for_stmt (152)
    on left: 139 140, on right: 127
try_stmt (153)
    on left: 141 142, on right: 128
plus_except (154)
    on left: 143 144, on right: 141 143
opt_ELSE (155)
    on left: 145 146, on right: 141
opt_FINALLY (156)
    on left: 147 148, on right: 141
with_stmt (157)
    on left: 149, on right: 129
star_COMMA_with_item (158)
    on left: 150 151, on right: 149 150
with_item (159)
    on left: 152 153, on right: 149 150
except_clause (160)
    on left: 154 155, on right: 143 144
pick_AS_COMMA (161)
    on left: 156 157, on right: 158
opt_AS_COMMA (162)
    on left: 158 159, on right: 154
suite (163)
    on left: 160 161, on right: 15 133 134 135 137 138 139 140 141
    142 143 144 145 147 149 277 278
plus_stmt (164)
    on left: 162 163, on right: 161 162
testlist_safe (165)
    on left: 164 165, on right: 297 298
plus_COMMA_old_test (166)
    on left: 166 167, on right: 164 166
old_test (167)
    on left: 168 169, on right: 164 165 166 167 170 171 299 300 305
    306
old_lambdef (168)
    on left: 170 171, on right: 169
test (169)
    on left: 172 173, on right: 20 70 71 73 75 76 91 93 95 121 123
    124 133 134 135 137 138 152 153 154 158 174 241 242 243 244 245
    246 255 257 261 267 268 269 270 271 286 289 290 291 292 307 308
opt_IF_ELSE (170)
    on left: 174 175, on right: 172
or_test (171)
    on left: 176 177, on right: 168 172 174 177 303 304
and_test (172)
    on left: 178 179, on right: 176 177 179
not_test (173)
    on left: 180 181, on right: 178 179 180
comparison (174)
    on left: 182 183, on right: 181 183
comp_op (175)
    on left: 184 185 186 187 188 189 190 191 192 193 194, on right:
    183
expr (176)
    on left: 195 196, on right: 121 122 152 182 183 196 263 264 265
xor_expr (177)
    on left: 197 198, on right: 195 196 198
and_expr (178)
    on left: 199 200, on right: 197 198 200
shift_expr (179)
    on left: 201 202, on right: 199 200 202
pick_LEFTSHIFT_RIGHTSHIFT (180)
    on left: 203 204, on right: 202
arith_expr (181)
    on left: 205 206, on right: 201 202 206
pick_PLUS_MINUS (182)
    on left: 207 208, on right: 206
term (183)
    on left: 209 210, on right: 205 206 210
pick_multop (184)
    on left: 211 212 213 214, on right: 210
factor (185)
    on left: 215 216, on right: 209 210 215 220
pick_unop (186)
    on left: 217 218 219, on right: 215
power (187)
    on left: 220 221, on right: 216
star_trailer (188)
    on left: 222 223, on right: 220 221 222
atom (189)
    on left: 224 225 226 227 228 229 230, on right: 220 221
pick_yield_expr_testlist_comp (190)
    on left: 231 232, on right: 233
opt_yield_test (191)
    on left: 233 234, on right: 224
opt_listmaker (192)
    on left: 235 236, on right: 225
opt_dictorsetmaker (193)
    on left: 237 238, on right: 226
plus_STRING (194)
    on left: 239 240, on right: 230 239
listmaker (195)
    on left: 241 242, on right: 235
testlist_comp (196)
    on left: 243 244, on right: 232
lambdef (197)
    on left: 245 246, on right: 173
trailer (198)
    on left: 247 248 249, on right: 222
subscriptlist (199)
    on left: 250 251, on right: 248
star_COMMA_subscript (200)
    on left: 252 253, on right: 250 251 252
subscript (201)
    on left: 254 255 256, on right: 250 251 252
opt_test_only (202)
    on left: 257 258, on right: 256
opt_sliceop (203)
    on left: 259 260, on right: 256
sliceop (204)
    on left: 261 262, on right: 259
exprlist (205)
    on left: 263 264, on right: 79 139 140 297 298 303 304
star_COMMA_expr (206)
    on left: 265 266, on right: 263 264 265
testlist (207)
    on left: 267 268, on right: 51 52 54 88 139 140 279 309
dictorsetmaker (208)
    on left: 269 270, on right: 237
star_test_COLON_test (209)
    on left: 271 272, on right: 271 274
pick_for_test_test (210)
    on left: 273 274, on right: 269
pick_for_test (211)
    on left: 275 276, on right: 270
classdef (212)
    on left: 277 278, on right: 13 131
opt_testlist (213)
    on left: 279 280, on right: 277
arglist (214)
    on left: 281, on right: 9
star_argument_COMMA (215)
    on left: 282 283, on right: 281 282
star_COMMA_argument (216)
    on left: 284 285, on right: 284 289
opt_DOUBLESTAR_test (217)
    on left: 286 287, on right: 289
pick_argument (218)
    on left: 288 289 290, on right: 281
argument (219)
    on left: 291 292, on right: 282 284 288
opt_comp_for (220)
    on left: 293 294, on right: 291
list_iter (221)
    on left: 295 296, on right: 297 299
list_for (222)
    on left: 297 298, on right: 241 295
list_if (223)
    on left: 299 300, on right: 296
comp_iter (224)
    on left: 301 302, on right: 303 305
comp_for (225)
    on left: 303 304, on right: 243 273 275 293 301
comp_if (226)
    on left: 305 306, on right: 302
testlist1 (227)
    on left: 307 308, on right: 227 308
yield_expr (228)
    on left: 309 310, on right: 53 90 231
star_DOT (229)
    on left: 311 312, on right: 101 102 311


State 0

    0 $accept: . start $end

    $default  reduce using rule 6 (star_NEWLINE_stmt)

    start              go to state 1
    file_input         go to state 2
    star_NEWLINE_stmt  go to state 3


State 1

    0 $accept: start . $end

    $end  shift, and go to state 4


State 2

    1 start: file_input .

    $default  reduce using rule 1 (start)


State 3

    2 file_input: star_NEWLINE_stmt . ENDMARKER
    5 star_NEWLINE_stmt: star_NEWLINE_stmt . pick_NEWLINE_stmt

    ASSERT     shift, and go to state 5
    AT         shift, and go to state 6
    BACKQUOTE  shift, and go to state 7
    BREAK      shift, and go to state 8
    CLASS      shift, and go to state 9
    CONTINUE   shift, and go to state 10
    DEF        shift, and go to state 11
    DEL        shift, and go to state 12
    ENDMARKER  shift, and go to state 13
    EXEC       shift, and go to state 14
    FOR        shift, and go to state 15
    FROM       shift, and go to state 16
    GLOBAL     shift, and go to state 17
    IF         shift, and go to state 18
    IMPORT     shift, and go to state 19
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NEWLINE    shift, and go to state 26
    NOT        shift, and go to state 27
    NUMBER     shift, and go to state 28
    PASS       shift, and go to state 29
    PLUS       shift, and go to state 30
    PRINT      shift, and go to state 31
    RAISE      shift, and go to state 32
    RETURN     shift, and go to state 33
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35
    TRY        shift, and go to state 36
    WHILE      shift, and go to state 37
    WITH       shift, and go to state 38
    YIELD      shift, and go to state 39

    pick_NEWLINE_stmt  go to state 40
    decorator          go to state 41
    decorators         go to state 42
    decorated          go to state 43
    funcdef            go to state 44
    stmt               go to state 45
    simple_stmt        go to state 46
    small_stmt         go to state 47
    expr_stmt          go to state 48
    print_stmt         go to state 49
    del_stmt           go to state 50
    pass_stmt          go to state 51
    flow_stmt          go to state 52
    break_stmt         go to state 53
    continue_stmt      go to state 54
    return_stmt        go to state 55
    yield_stmt         go to state 56
    raise_stmt         go to state 57
    import_stmt        go to state 58
    import_name        go to state 59
    import_from        go to state 60
    global_stmt        go to state 61
    exec_stmt          go to state 62
    assert_stmt        go to state 63
    compound_stmt      go to state 64
    if_stmt            go to state 65
    while_stmt         go to state 66
    for_stmt           go to state 67
    try_stmt           go to state 68
    with_stmt          go to state 69
    test               go to state 70
    or_test            go to state 71
    and_test           go to state 72
    not_test           go to state 73
    comparison         go to state 74
    expr               go to state 75
    xor_expr           go to state 76
    and_expr           go to state 77
    shift_expr         go to state 78
    arith_expr         go to state 79
    term               go to state 80
    factor             go to state 81
    pick_unop          go to state 82
    power              go to state 83
    atom               go to state 84
    plus_STRING        go to state 85
    lambdef            go to state 86
    testlist           go to state 87
    classdef           go to state 88
    yield_expr         go to state 89


State 4

    0 $accept: start $end .

    $default  accept


State 5

  123 assert_stmt: ASSERT . test COMMA test
  124            | ASSERT . test

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NOT        shift, and go to state 27
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    test         go to state 90
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86


State 6

    7 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 91

    dotted_name  go to state 92


State 7

  227 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NOT        shift, and go to state 27
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    test         go to state 93
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86
    testlist1    go to state 94


State 8

   86 break_stmt: BREAK .

    $default  reduce using rule 86 (break_stmt)


State 9

  277 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  278         | CLASS . NAME COLON suite

    NAME  shift, and go to state 95


State 10

   87 continue_stmt: CONTINUE .

    $default  reduce using rule 87 (continue_stmt)


State 11

   15 funcdef: DEF . NAME parameters COLON suite

    NAME  shift, and go to state 96


State 12

   79 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    expr         go to state 97
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 98


State 13

    2 file_input: star_NEWLINE_stmt ENDMARKER .

    $default  reduce using rule 2 (file_input)


State 14

  121 exec_stmt: EXEC . expr IN test opt_COMMA_test
  122          | EXEC . expr

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    expr         go to state 99
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85


State 15

  139 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  140         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35

    expr         go to state 97
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 100


State 16

  100 import_from: FROM . pick_dotted_name IMPORT pick_STAR_import

    $default  reduce using rule 312 (star_DOT)

    pick_dotted_name  go to state 101
    star_DOT          go to state 102


State 17

  118 global_stmt: GLOBAL . NAME star_COMMA_NAME

    NAME  shift, and go to state 103


State 18

  133 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  134        | IF . test COLON suite star_ELIF

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 20
    LBRACE     shift, and go to state 21
    LPAR       shift, and go to state 22
    LSQB       shift, and go to state 23
    MINUS      shift, and go to state 24
    NAME       shift, and go to state 25
    NOT        shift, and go to state 27
    NUMBER     shift, and go to state 28
    PLUS       shift, and go to state 30
    STRING     shift, and go to state 34
    TILDE      shift, and go to state 35
